# Simple-Backup-Tool

./: README.md
project_files/: CMakeLists.txt
project_files/src/: MurmurHash3.cc  MurmurHash3.h  adler32.cc  adler32.h  backup.cc  backup.h  definition.h  delta.cc  delta.h  main.cc  restore.cc  restore.h  utils.cc  utils.h
